Bug 561011 - [14] Export of a plugin project with record ( or sealed types) fails
Change-Id: I1937622ff98d1befcfd1d037b0600bbcbbd465a6
Signed-off-by: Vikas Chandra <Vikas.Chandra@in.ibm.com>